--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,99 @@
 <html>
   <head>
     <title>BOOK2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+    
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/cbde064e64.js" crossorigin="anonymous"></script>
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
+  <header class="shadow-sm">
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+      <%= link_to root_path, class: 'nav-link text-light' do %> 
+       BOOK CHECKERS
+      <% end %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+       <ul class="navbar-nav ml-auto">
+      
+      <% if user_signed_in? %>
+      
+       <li class="nav-item">
+        <%= link_to user_path(current_user.id), class:'nav-link text-light' do %>
+         <i class="fas fa-home"></i>Home
+        <% end %>
+       </li>
+       
+       <li class="nav-item">
+        <%=link_to users_path, class: 'nav-link text-light' do %>
+         <i class="fas fa-users"></i>Users
+        <% end %>
+       </li>
+       
+       <li class="nav-item">
+        <%= link_to books_path, class:'nav-link text-light' do %>
+         <i class="fas fa-book-open"></i>Books
+        <% end %>
+       </li>
+       
+       <li>
+        <%= link_to destroy_user_session_path, method: :delete,class:'nav-link text-light' do %>
+         <i class="fas fa-sign-out-alt"></i> Log out
+        <% end %> 
+       </li>
+     
+     <% else %>
+      
+       <li class="nav-item">
+        <%= link_to root_path, class:'nav-link text-light' do %>
+         <i class="fas fa-home"></i>Home
+        <% end %>
+       </li>
+       
+       <li class="nav-item">
+        <%= link_to home_about_path,class:'nav-link text-light' do %>
+         <i class="fas fa-link"></i>About    
+        <% end %>
+       </li>
+       
+       <li class="nav-item">
+        <%= link_to new_user_registration_path, class:'nav-link text-light' do %>
+         <i class="fas fa-user-plus"></i>Sign up
+        <% end %>
+       </li>
+       
+       <li class="nav-item">
+        <%= link_to new_user_session_path, class:'nav-link text-light' do %>
+         <i class="fas fa-sign-in-alt"></i>Log in
+        <% end %>
+       </li>
+      <% end %> 
+      </ul>
+     </div>
+    </div>
+    </nav>
+   </header>
+   <main>
+        <p class="text-success"><%= flash[:notice] %></p>
+        <p class="text-danger"><%= flash[:alert] %></p>
     <%= yield %>
+   </main>
   </body>
+               
+  <footer>
+    <div class="container mt-5">
+      <div class="row">
+         <div class="mx-auto">
+            <p>CopyRight Infratop.Inc</p>
+         </div>
+      </div>
+     </div>
+  </footer>  
 </html>
